<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-light"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_routes" 
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stations"
        android:padding="4dp"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="#16a085"
        />

    <EditText
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/from"
        android:id="@+id/search_from_text"
    	android:inputType="text"/>
    <EditText
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to"
        android:id="@+id/search_to_text"
    	android:inputType="text"/>
    
    <TextView
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="#16a085"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingBottom="8dp">
	    <Button
	        android:textColor="?android:attr/textColorHint"
		    style="@android:style/Widget.Holo.Light.Spinner"
		    android:id="@+id/search_date_spinner"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:text="@string/date"
		    android:layout_height="wrap_content" />
	    <Button
	        android:textColor="?android:attr/textColorHint"
		    style="@android:style/Widget.Holo.Light.Spinner"
		    android:id="@+id/search_time_spinner"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:text="@string/time"
		    android:layout_height="wrap_content" />
	</LinearLayout>
	<Button 
	    android:id="@+id/search_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/search"
	    
	    />
</LinearLayout>
</ScrollView>